--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "esbuild": "^0.17.12",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
+  },
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
   }
 }
